# kafka-framework

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
cli/: app.py  logging.py  utils.py  workers.py
examples/: order_processing.py
kafka_framework/: __init__.py  app.py
kafka_framework/dependencies/: __init__.py  injection.py
kafka_framework/exceptions/: __init__.py  handlers.py
kafka_framework/kafka/: __init__.py  consumer.py  producer.py  retry.py
kafka_framework/models/: __init__.py  config.py  message.py
kafka_framework/routing/: __init__.py  decorators.py  router.py
kafka_framework/serialization/: __init__.py  avro.py  base.py  json.py
kafka_framework/utils/: dlq.py
