[project]
name = "kafka-framework"
version = "0.1.0"
description = "A FastAPI-style Python framework for Kafka-based applications"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  { name = "Ahammad Hani", email = "ahmedhanitk@gmail.com" }
]
dependencies = [
  "aiokafka>=0.12.0",
  "pydantic>=2.0.0",
  "typing-extensions>=4.5.0",
]

[project.urls]
Homepage = "https://github.com/ahdhani/kafka-framework"
Repository = "https://github.com/ahdhani/kafka-framework"
Issues = "https://github.com/ahdhani/kafka-framework/issues"

[project.optional-dependencies]
avro = ["fastavro>=1.8.0"]
protobuf = ["protobuf>=4.23.3"]
all = ["fastavro>=1.8.0", "protobuf>=4.23.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
